# virtio-forwarder-dist

./: .ansible-lint  .gitreview  .zuul.yaml  README.md  meson.build  virtio-forwarder.spec.in
ansible/: playbook.yaml
ansible/roles/prepare-buildenv/tasks/: debian.yaml  restart-zuul-console.yaml
ansible/roles/prepare-buildenv/templates/: sbuildrc.j2
debian/: changelog  control  rules
scripts/: prep_and_run_debuild.sh  prep_and_run_rpmbuild.sh
